--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -46,8 +46,23 @@
           <p class="text-sm text-gray-500">時間：{{ comment.created_at|date:"Y-m-d H:i:s" }}</p>
           <p>{{ comment.content }}</p>
         </div>
-        <div class="flex justify-end px-4 py-2">
-          <form action="{% url 'comments:delete' pk=comment.id %}" method="post" class="inline">
+            
+        <div class="flex justify-end px-4 ">
+
+          <div class="mr-10 flex items-center">
+                  <span class="mr-5"> comment_id: {{comment.id}}</span>
+          <form class="mr-5" hx-post="{% url 'comments:add_like' comment.id %}" hx-swap="none">
+              {% csrf_token %}
+              <button class="px-2 py-1 bg-blue-400 rounded-lg text-white hover:bg-blue-600 focus:outline-none focus:ring">按讚</button>
+          </form>
+          <form class="mr-5" hx-post="{% url 'comments:remove_like' comment.id %}" hx-swap="none">
+              {% csrf_token %}
+              <button class="px-2 py-1 bg-red-400 rounded-lg text-white hover:bg-red-600  focus:outline-none focus:ring">取消讚</button>
+          </form>
+            <p>按讚數: <span>{{comment_count}}</span></p>
+          </div>
+
+          <form   action="{% url 'comments:delete' pk=comment.id %}" method="post" class="inline">
             {% csrf_token %}
             <button type="submit" class="px-2 py-1 text-white bg-red-500 rounded">刪除</button>
           </form>
