fix:新增footer.html獨立區塊

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -26,6 +26,7 @@
   {% include 'shared/message.html' %}
   {% block content %}
   {% endblock %}
+  {% include "shared/footer.html" %}
 </body>
 
 </html>
