--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -11,7 +11,7 @@
 
 <div class="flex justify-end mr-10">
   <a href="{% url 'events:calendar' %}"
-    class="px-4 py-3 mt-5 text-white bg-orange-500 rounded hover:bg-orange-600">回行事曆</a>
+    class="px-4 py-3 mt-5 text-white bg-orange-500 rounded hover:bg-orange-600">回活動日曆</a>
 </div>
 <div class="flex justify-end mb-4 mr-10">
   <a href="{% url 'events:new' %}" class="px-4 py-3 mt-5 text-white bg-orange-500 rounded hover:bg-orange-600">新增活動</a>
