--- a/templates/shared/news.html
+++ b/templates/shared/news.html
@@ -1,4 +1,4 @@
-<div class="sticky top-[68px] flex gap-2 overflow-hidden">
+<div class="sticky top-[68px] flex gap-2 overflow-hidden z-10">
     <div class="bg-blue-500">
         <a class="block w-screen p-2 text-center text-white" href="">NEWS ONE</a>
     </div>
