--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,10 +19,14 @@
   <!-- slick.min.js -->
   <script src="{% static 'vendor/slick.carousel/slick.min.js' %}"></script>
   <script src="{% static 'scripts/custom.js' %}" defer></script>
-  <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.12"
+    integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
+    crossorigin="anonymous"></script>
   <style>
     @import url('https://cdnjs.cloudflare.com/ajax/libs/tailwindcss-line-clamp/0.2.1/tailwindcss-line-clamp.min.css');
   </style>
+  <!-- sweet alert -->
+  <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
   <title>{% block title %} Diswork {% endblock %}</title>
