--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -1,5 +1,5 @@
 <nav
-  class="sticky top-0 flex flex-col w-full px-6 py-5 font-sans text-center text-white bg-gray-900 shadow sm:flex-row sm:text-left sm:justify-between sm:items-baseline">
+  class="sticky top-0 z-10 flex flex-col w-full px-6 py-5 font-sans text-center text-white bg-gray-900 shadow sm:flex-row sm:text-left sm:justify-between sm:items-baseline">
   <div class="flex items-center justify-between w-full">
     <div class="flex items-center">
       <a href="{% url 'root' %}">
