--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -4,54 +4,57 @@
 <div class="flex items-center justify-center w-3/4 min-h-screen m-auto">
   <div class="w-full max-w-3xl">
     <div class="container py-12 mx-auto md:py-16 lg:py-20">
-  
-        <article class="prose prose-gray dark:prose-invert">
-          <div class="space-y-8">
-            <h1 class="text-xl font-bold tracking-tight sm:text-3xl md:text-4xl">{{ article.title }}</h1>
-            <div class="flex items-center gap-4 mt-4 space-x-4 text-sm text-gray-500 dark:text-gray-400">
-              <div>樓主：{{ article.author }}</div>
-              <div class="flex items-center space-x-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4">
-                  <path d="M8 2v4"></path>
-                  <path d="M16 2v4"></path>
-                  <rect width="18" height="18" x="3" y="4" rx="2"></rect>
-                  <path d="M3 10h18"></path>
-                </svg>
-                <span>{{ article.created_at }}</span>
-              </div>
-              {% if user.is_authenticated %}
-              {% if user == article.author %}
-              <div class="flex gap-2">
-                <a href="{% url 'articles:edit' article.id %}">編輯</a>
-                <form action="{% url 'articles:delete' article.id %}" method="post">
-                  {% csrf_token %}
-                  <button type="submit">刪除</button>
-                </form>
-              </div>
-                {% endif %}
-                {% endif %}
-              </div>
-              <div class="flex justify-between prose prose-gray dark:prose-invert">
-                <p>
-                  {{ article.content }}
-                </p>
-                <div class="flex items-end">
-                  {% if article.is_like %}
-                  <form hx-post="{% url 'articles:remove_like' article.id %}" hx-swap="none">
-                  {% csrf_token %}    
-                    <button class="py-2 px-4 mx-2 mb-1 font-bold shadow duration-150  text-white ease-linear active:bg-slate-700 text-slate-700 rounded bg-red-400 focus:outline-none uppercase focus:shadow-sky-800 ">取消讚</button>
-                  </form>
-                  {% else %}
-                  <form hx-post="{% url 'articles:add_like' article.id %}" hx-swap="none">
-                    {% csrf_token %}
-                    <button class="py-2 px-4 mx-2 mb-1 font-bold shadow duration-150  text-white ease-linear active:bg-slate-700 text-slate-700 rounded bg-sky-400 focus:outline-none uppercase focus:shadow-sky-800 ">點讚</button>
-                  </form>
-                  {% endif %}     
-                </div>
-              </div>
+
+      <article class="prose prose-gray dark:prose-invert">
+        <div class="space-y-8">
+          <h1 class="text-xl font-bold tracking-tight sm:text-3xl md:text-4xl">
+            {{ article.title }}</h1>
+          <div class="flex items-center gap-4 mt-4 space-x-4 text-sm text-gray-500 dark:text-gray-400">
+            <div>樓主：{{ article.author }}</div>
+            <div class="flex items-center space-x-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4">
+                <path d="M8 2v4"></path>
+                <path d="M16 2v4"></path>
+                <rect width="18" height="18" x="3" y="4" rx="2"></rect>
+                <path d="M3 10h18"></path>
+              </svg>
+              <span>{{ article.created_at }}</span>
             </div>
-          </article>
+            {% if user.is_authenticated %}
+            {% if user == article.author %}
+            <div class="flex gap-2">
+              <a href="{% url 'articles:edit' article.pk %}">編輯</a>
+              <form action="{% url 'articles:delete' article.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">刪除</button>
+              </form>
+            </div>
+            {% endif %}
+            {% endif %}
+          </div>
+          <div class="flex justify-between prose prose-gray dark:prose-invert">
+            <p>
+              {{ article.content }}
+            </p>
+            <div class="flex items-end">
+              {% if article.is_like %}
+              <form hx-post="{% url 'articles:remove_like' article.id %}" hx-swap="none">
+                {% csrf_token %}
+                <button
+                  class="px-4 py-2 mx-2 mb-1 font-bold text-white uppercase duration-150 ease-linear bg-red-400 rounded shadow active:bg-slate-700 text-slate-700 focus:outline-none focus:shadow-sky-800 ">取消讚</button>
+              </form>
+              {% else %}
+              <form hx-post="{% url 'articles:add_like' article.id %}" hx-swap="none">
+                {% csrf_token %}
+                <button
+                  class="px-4 py-2 mx-2 mb-1 font-bold text-white uppercase duration-150 ease-linear rounded shadow active:bg-slate-700 text-slate-700 bg-sky-400 focus:outline-none focus:shadow-sky-800 ">點讚</button>
+              </form>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </article>
     </div>
     <div class="container py-12 mx-auto md:py-14 lg:py-1">
       <h2 class="mb-4 text-xl font-bold">留言列表</h2>
