--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -1,8 +1,11 @@
 {% extends 'boards/base.html' %}
 {% block content %}
 <div class="flex justify-between mx-10 mt-8">
-  <div>
-    <h1 class="my-2 ml-2 text-3xl">文章列表</h1>
+  <div class="flex items-center space-x-4">
+    <a href="{% url 'boards:list' %}" class="px-4 py-2 text-white bg-orange-500 rounded hover:bg-orange-600">回到討論版</a>
+  </div>
+  <div class="flex flex-col items-center mr-4">
+    <h1 class="my-2 text-3xl">文章列表</h1>
     <div class="flex items-center pr-3 border-2 hover:bg-orange-500 hover:text-white hover:opacity-75">
       <a href="{% url 'articles:new' %}"
         class="inline-flex items-center justify-center w-10 h-10 font-medium transition-colors rounded-full whitespace-nowrap ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground">
@@ -17,9 +20,9 @@
       </a>
     </div>
   </div>
-  <div>
+  <div class="flex items-center space-x-4">
     <a href="{% url 'events:calendar' %}"
-      class="px-4 py-3 mt-5 text-white bg-orange-500 rounded hover:bg-orange-600">行事曆</a>
+      class="px-4 py-3 text-white bg-orange-500 rounded hover:bg-orange-600">活動日曆</a>
   </div>
 </div>
 <div class="flex flex-col w-5/6 p-4 mx-auto md:p-6">
@@ -30,23 +33,32 @@
         <div class="flex-shrink-0 h-10 ml-5 mr-5 overflow-hidden bg-gray-300 rounded-lg w-36 md:w-auto md:h-auto">
           <a href="{% url 'articles:show' article.id %}">
             <img src="https://fakeimg.pl/360x150/" alt="{{ article.title }}" class="object-cover w-full h-full">
-          </a>  
+          </a>
         </div>
-        <div class="md:ml-4">
+        <div class="mt-4 md:ml-4">
           <div class="text-lg font-semibold forum_list_title">
             <a href="{% url 'articles:show' article.id %}" class="text-black hover:underline">
               {{ article.title }}
             </a>
           </div>
-        <div class="mt-2 text-sm text-gray-600">
-          {{ article.content }}
+          <div class="mx-2 mt-4 text-sm text-gray-600 line-clamp-2">
+            {{ article.content }}
+          </div>
+          <div class="flex justify-between mt-5 ">
+            <div>
+              <a href="{% url 'articles:show' article.pk %}"
+                class="inline-block mt-4 text-blue-500 hover:underline">閱讀全文</a>
+            </div>
+            <div class="ml-4">
+              <div class="p-2 mt-4 space-x-2 bg-gray-100 rounded-lg shadow-md w-30">
+                <p class="px-3 text-sm font-semibold text-gray-800">讚: {{ article.like_count }}</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <a href="{% url 'articles:show' article.pk %}" class="block mt-4 text-blue-500 hover:underline">閱讀全文</a>
       </div>
-    </div>  
-    <div class="flex items-end">
-      <p>讚數統計: {{article.like_count}}</p>
-    </div>
+      <div class="flex items-end">
+      </div>
     </div>
   </div>
   {% endfor %}
