--- a/templates/boards/board_list.html
+++ b/templates/boards/board_list.html
@@ -40,7 +40,8 @@
         </div>
         <div class="ml-auto">
           <a href="{% url 'boards:edit' pk=category.pk %}">
-            <button class="px-4 py-2 text-gray-500 bg-gray-200 rounded hover:bg-gray-300">編輯</button>
+            <button class="px-4 py-2 text-gray-500 bg-gray-200 rounded hover:bg-gray-300">編輯
+            </button>
           </a>
         </div>
       </div>
